--- a/rentx/ios/Podfile
+++ b/rentx/ios/Podfile
@@ -18,4 +18,6 @@ target 'rentx2' do
   #     flipper_post_install(installer)
   #   end
   # end
+  pod 'RNFastImage', :path => '../node_modules/react-native-fast-image'
+
 end
